--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,27 @@
 ---
-abstract: unknown
+abstract: 'Validate recursive hash structures'
 author:
-  - unknown
+  - 'Thomas v.Dein <tom@cpan.org>'
+  - 'Per Carlson <pelle@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.130880'
-license: unknown
+generated_by: 'ExtUtils::MakeMaker version 7.02, CPAN::Meta::Converter version 2.142690'
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Data-Validate-Struct
 no_index:
   directory:
     - t
     - inc
 requires:
-  Data::Validate: 0.06
-  Data::Validate::IP: 0.18
-  Regexp::Common: 0
+  Data::Validate: '0.06'
+  Data::Validate::IP: '0.18'
+  Regexp::Common: '0'
 resources:
   repository: https://github.com/TLINDEN/Data-Validate-Struct
-version: 0.08
+version: '0.09'
